--- a/FreeAIr/UI/Dialog/DialogControl.xaml
+++ b/FreeAIr/UI/Dialog/DialogControl.xaml
@@ -16,8 +16,8 @@
             <Border
                 BorderBrush="#569CD6"
                 Margin="0,2,0,2"
-                BorderThickness="{Binding BorderThickness}"
-                HorizontalAlignment="{Binding HorizontalAlignment}"
+                BorderThickness="1, 1, 10, 1"
+                HorizontalAlignment="Right"
                 >
 
                 <FlowDocumentScrollViewer
@@ -36,8 +36,8 @@
             <Border
                 BorderBrush="#569CD6"
                 Margin="0,2,0,2"
-                BorderThickness="{Binding BorderThickness}"
-                HorizontalAlignment="{Binding HorizontalAlignment}"
+                BorderThickness="10, 1, 1, 1"
+                HorizontalAlignment="Left"
                 >
 
                 <FlowDocumentScrollViewer
@@ -52,60 +52,85 @@
                 </FlowDocumentScrollViewer>
             </Border>
         </DataTemplate>
-
         <DataTemplate x:Key="ToolCallContentTemplate">
-            <StackPanel
-                Orientation="Horizontal"
+            <Border
                 HorizontalAlignment="Center"
+                BorderBrush="#569CD6"
+                BorderThickness="1"
                 >
-                <!--  x:Name is a workaround for https://stackoverflow.com/questions/22108712/could-not-load-file-or-assembly-xceed-wpf-toolkit  -->
-                <xctk:SplitButton
-                    Margin="0,0,5,0"
-                    Padding="5,1,5,1"
-                    MinWidth="200"
-                    VerticalAlignment="Stretch"
-                    HorizontalContentAlignment="Right"
-                    Foreground="{Binding ElementName=ForegroundButton, Path=Foreground}"
-                    Background="{Binding ElementName=ForegroundButton, Path=Background}"
-                    DropDownContentBackground="{Binding ElementName=ForegroundButton, Path=Background}"
-                    Content="{Binding UIDescription}"
-                    Command="{Binding ClickCommand}"
+                <Grid
+                    Margin="2"
                     >
-                    <xctk:SplitButton.DropDownContent>
-                        <StackPanel
-                            >
-                            <Button
-                                Margin="20,2,10,2"
-                                Content="BLOCK at this time"
-                                Style="{DynamicResource TextBlockLikeButtonStyle}"
-                                Command="{Binding BlockAtThisTimeCommand}"
-                                />
-                            <Button
-                                Margin="20,20,10,2"
-                                Foreground="Red"
-                                Content="Allow THIS tool all the time"
-                                Style="{DynamicResource TextBlockLikeButtonStyle}"
-                                Command="{Binding AllowThisToolAllTimeCommand}"
-                                />
-                            <Button
-                                Margin="20,2,10,2"
-                                Foreground="Red"
-                                Content="Allow ANY tool all the time"
-                                Style="{DynamicResource TextBlockLikeButtonStyle}"
-                                Command="{Binding AllowAnyToolAllTimeCommand}"
-                                />
-                        </StackPanel>
-                    </xctk:SplitButton.DropDownContent>
-                </xctk:SplitButton>
+                    <Grid.RowDefinitions>
+                        <RowDefinition  Height="auto" />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
 
-                <Button
-                    Content="👁"
-                    Margin="0"
-                    Padding="0"
-                    VerticalAlignment="Stretch"
-                    Command="{Binding ShowResultCommand}"
-                    />
-            </StackPanel>
+                    <FlowDocumentScrollViewer
+                        Grid.Row="0"
+                        
+                        HorizontalAlignment="Center"
+                        Document="{Binding ToolArgumentsFlowDocument}"
+                        VerticalScrollBarVisibility="Auto"
+                        Visibility="{Binding DocumentVisibility}"
+                        />
+
+                    <StackPanel
+                        Grid.Row="1"
+                        Orientation="Horizontal"
+                        HorizontalAlignment="Center"
+                        >
+                        <!--  x:Name is a workaround for https://stackoverflow.com/questions/22108712/could-not-load-file-or-assembly-xceed-wpf-toolkit  -->
+                        <xctk:SplitButton
+                            Margin="0,0,5,0"
+                            Padding="5,1,5,1"
+                            MinWidth="200"
+                            VerticalAlignment="Stretch"
+                            HorizontalContentAlignment="Right"
+                            Foreground="{Binding ElementName=ForegroundButton, Path=Foreground}"
+                            Background="{Binding ElementName=ForegroundButton, Path=Background}"
+                            DropDownContentBackground="{Binding ElementName=ForegroundButton, Path=Background}"
+                            Content="{Binding UIDescription}"
+                            Command="{Binding ClickCommand}"
+                            >
+                            <xctk:SplitButton.DropDownContent>
+                                <StackPanel
+                                >
+                                    <Button
+                                        Margin="20,2,10,2"
+                                        Content="BLOCK at this time"
+                                        Style="{DynamicResource TextBlockLikeButtonStyle}"
+                                        Command="{Binding BlockAtThisTimeCommand}"
+                                        />
+                                    <Button
+                                        Margin="20,20,10,2"
+                                        Foreground="Red"
+                                        Content="Allow THIS tool all the time"
+                                        Style="{DynamicResource TextBlockLikeButtonStyle}"
+                                        Command="{Binding AllowThisToolAllTimeCommand}"
+                                        />
+                                    <Button
+                                        Margin="20,2,10,2"
+                                        Foreground="Red"
+                                        Content="Allow ANY tool all the time"
+                                        Style="{DynamicResource TextBlockLikeButtonStyle}"
+                                        Command="{Binding AllowAnyToolAllTimeCommand}"
+                                        />
+                                </StackPanel>
+                            </xctk:SplitButton.DropDownContent>
+                        </xctk:SplitButton>
+
+                        <Button
+                            Content="👁"
+                            Margin="0"
+                            Padding="0"
+                            VerticalAlignment="Stretch"
+                            Command="{Binding ShowResultCommand}"
+                            ToolTip="Show tool results"
+                            />
+                    </StackPanel>
+                </Grid>
+            </Border>
         </DataTemplate>
 
         <content:DialogTemplateSelector
