Adding a voice prompts. (in progress)

--- a/FreeAIr/UI/Windows/InSituChatWindow.xaml
+++ b/FreeAIr/UI/Windows/InSituChatWindow.xaml
@@ -18,6 +18,7 @@
     WindowStartupLocation="Manual"
     ShowInTaskbar="True"
     Topmost="True"
+    AllowsTransparency="True"
     WindowStyle="None"
     SizeChanged="Window_SizeChanged"
     PreviewKeyUp="Window_PreviewKeyUp"
