--- a/FreeAIr/UI/Chat/ChatControl.xaml
+++ b/FreeAIr/UI/Chat/ChatControl.xaml
@@ -19,6 +19,8 @@
     mc:Ignorable="d" 
     d:DesignHeight="450" d:DesignWidth="800"
     x:Name="ChatControlName"
+    PreviewKeyDown="ChatControlName_PreviewKeyDown"
+    PreviewKeyUp="ChatControlName_PreviewKeyUp"
     >
     <UserControl.Resources>
         <ui:InvertBooleanToVisibilityConverter  x:Key="StopCommandVisibilityConverter" />
@@ -239,46 +241,85 @@
             HorizontalAlignment="Stretch"
             />
 
-        <ui:PseudoCrispImage
+        <Grid
             Grid.Row="3"
             Margin="2,5,2,2"
-            HorizontalAlignment="Right"
-            VerticalAlignment="Top"
-            Width="16"
-            Height="16"
-            IsHitTestVisible="False"
-            Moniker="{Binding ElementName=ChatControlName, Path=StatusMoniker}"
-            />
-
-        <embedillo:EmbedilloControl
-            Grid.Row="3"
-            Margin="2,2,2,2"
+            HorizontalAlignment="Stretch"
             VerticalAlignment="Stretch"
-            VerticalContentAlignment="Stretch"
-            Foreground="{Binding ElementName=ChatControlName, Path=Foreground}"
-            Background="Transparent"
-            FontSize="12"
-            FontFamily="Cascadia Code"
-            x:Name="PromptControl"
-            EnterCommand="{Binding ElementName=ChatControlName, Path=CreatePromptCommand}"
-            HintText="{x:Static resources:Resources.Enter_your_prompt_here__Press___to}"
-            ControlEnabled="{Binding ElementName=ChatControlName, Path=IsReadyToAcceptNewPrompt}"
-            MaxHeight="100000"
-            DragDrop.Drop="EmbedilloControl_Drop"
-            />
+            >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="auto" />
+            </Grid.ColumnDefinitions>
 
+            <ui:PseudoCrispImage
+                Grid.Row="0"
+                Grid.Column="1"
+                Margin="2,5,2,2"
+                Width="16"
+                Height="16"
+                IsHitTestVisible="False"
+                Moniker="{Binding ElementName=ChatControlName, Path=StatusMoniker}"
+                />
 
-        <Button
-            Grid.Row="3"
-            Margin="5,2,5,2"
-            Content="{x:Static resources:Resources.UI_StopWaiting}"
-            HorizontalAlignment="Right"
-            VerticalAlignment="Bottom"
-            FontFamily="Cascadia Code"
-            Visibility="{Binding ElementName=ChatControlName, Path=IsReadyToAcceptNewPrompt, Converter={StaticResource StopCommandVisibilityConverter}}"
-            Command="{Binding ElementName=ChatControlName, Path=StopCommand}"
-            Style="{DynamicResource TextBlockLikeButtonStyle}"
-            />
+            <ui:PseudoCrispImage
+                Grid.Row="1"
+                Grid.Column="1"
+                Margin="2,2,2,2"
+                Width="16"
+                Height="16"
+                Cursor="Hand"
+                Moniker="{Binding ElementName=ChatControlName, Path=RecordingMoniker}"
+                ToolTip="{Binding ElementName=ChatControlName, Path=RecordingToolTip}"
+                >
+                <ui:PseudoCrispImage.InputBindings>
+                    <MouseBinding
+                        Command="{Binding ElementName=ChatControlName, Path=ChooseRecorderCommand}"
+                        CommandParameter="{Binding .}"
+                        MouseAction="LeftClick"
+                        />
+                </ui:PseudoCrispImage.InputBindings>
+            </ui:PseudoCrispImage>
+
+            <embedillo:EmbedilloControl
+                Grid.Row="0"
+                Grid.RowSpan="3"
+                Grid.Column="0"
+                Margin="2,2,2,2"
+                VerticalAlignment="Stretch"
+                VerticalContentAlignment="Stretch"
+                Foreground="{Binding ElementName=ChatControlName, Path=Foreground}"
+                Background="Transparent"
+                FontSize="12"
+                FontFamily="Cascadia Code"
+                x:Name="PromptControl"
+                EnterCommand="{Binding ElementName=ChatControlName, Path=CreatePromptCommand}"
+                HintText="{x:Static resources:Resources.Enter_your_prompt_here__Press___to}"
+                ControlEnabled="{Binding ElementName=ChatControlName, Path=IsReadyToAcceptNewPrompt}"
+                MaxHeight="100000"
+                DragDrop.Drop="EmbedilloControl_Drop"
+                />
+
+            <Button
+                Grid.Row="2"
+                Grid.Column="0"
+                Grid.ColumnSpan="2"
+                Margin="5,2,5,2"
+                Content="{x:Static resources:Resources.UI_StopWaiting}"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Bottom"
+                FontFamily="Cascadia Code"
+                Visibility="{Binding ElementName=ChatControlName, Path=IsReadyToAcceptNewPrompt, Converter={StaticResource StopCommandVisibilityConverter}}"
+                Command="{Binding ElementName=ChatControlName, Path=StopCommand}"
+                Style="{DynamicResource TextBlockLikeButtonStyle}"
+                />
+
+        </Grid>
 
     </Grid>
 </UserControl>
