Fixed few bugs.

--- a/FreeAIr/UI/Windows/InSituChatWindow.xaml
+++ b/FreeAIr/UI/Windows/InSituChatWindow.xaml
@@ -20,6 +20,7 @@
     Topmost="True"
     AllowsTransparency="True"
     WindowStyle="None"
+    ResizeMode="CanResize"
     SizeChanged="Window_SizeChanged"
     PreviewKeyUp="Window_PreviewKeyUp"
     MouseLeftButtonDown="Window_MouseLeftButtonDown"
